added files to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,120 +15,120 @@ js: "/js/portfolio.js"
                     <ul id="filters" class="filters">
                         <li><a href="#" data-filter="*" class="current">All</a></li>
                         <li><a href="#" data-filter=".web">Web</a></li>
+                        <li><a href="#" data-filter=".mobile">Mobile</a></li>
                         <li><a href="#" data-filter=".app">App</a></li>
-                        <li><a href="#" data-filter=".photo">Photo</a></li>
                     </ul>
                 </div>
             </div>
             <div class="row">
                 <div id="portfolio-grid" class="portfolio-grid portfolio-hover-w">
                     <div class="grid-sizer"></div>
-                    <div class="portfolio-item tall app">
-                        <a class="popup-link" href="/portfolio/img-1.jpg" title="Lorem Ipsum languages">
-                            <img src="/portfolio/img-1.jpg" alt="">
+                    <div class="portfolio-item tall mobile">
+                        <a class="popup-link" href="/portfolio/moy_koshelek.png" title="Мой кошелек">
+                            <img src="/portfolio/moy_koshelek.png" alt="">
                             <div class="portfolio-caption ">
-                                <h3 class="portfolio-title">Lorem Ipsum languages</h3>
+                                <h3 class="portfolio-title">Мой кошелек</h3>
                                 <div class="portfolio-descr">
-                                    App
+                                    Мой кошелек - task from yandex school
                                 </div>
                             </div>
                         </a>
                     </div>
-                    <div class="portfolio-item photo">
-                        <a class="popup-link" href="/portfolio/img-2.jpeg" title="Lorem Ipsum languages">
-                            <img src="/portfolio/img-2.jpeg" alt="">
+                    <div class="portfolio-item web mobile">
+                        <a class="popup-link" href="/portfolio/afex_android.png" title="Afex - online store">
+                            <img src="/portfolio/afex_android.png" alt="">
                             <div class="portfolio-caption ">
-                                <h3 class="portfolio-title">Lorem Ipsum languages</h3>
+                                <h3 class="portfolio-title">Afex - online store</h3>
                                 <div class="portfolio-descr">
-                                    Photo
+                                    Android version of online store
                                 </div>
                             </div>
                         </a>
                     </div>
-                    <div class="portfolio-item photo">
-                        <a class="popup-link" href="/portfolio/img-3.jpeg" title="Lorem Ipsum languages">
-                            <img src="/portfolio/img-3.jpeg" alt="">
+                    <div class="portfolio-item web">
+                        <a class="popup-link" href="/portfolio/afex_new.png" title="Afex - online store">
+                            <img src="/portfolio/afex_new.png" alt="">
                             <div class="portfolio-caption ">
-                                <h3 class="portfolio-title">Lorem Ipsum languages</h3>
+                                <h3 class="portfolio-title">Afex - online store</h3>
                                 <div class="portfolio-descr">
-                                    Photo
+                                    New version of web store
                                 </div>
                             </div>
                         </a>
                     </div>
-                    <div class="portfolio-item photo">
-                        <a class="popup-link" href="/portfolio/img-4.jpeg" title="Lorem Ipsum languages">
-                            <img src="/portfolio/img-4.jpeg" alt="">
+                    <div class="portfolio-item mobile">
+                        <a class="popup-link" href="/portfolio/ya_calendar.png" title="Yandex calendar">
+                            <img src="/portfolio/ya_calendar.png" alt="">
                             <div class="portfolio-caption ">
-                                <h3 class="portfolio-title">Corporate Identity</h3>
+                                <h3 class="portfolio-title">Yandex calendar</h3>
                                 <div class="portfolio-descr">
-                                    Photo
+                                    Project of Yandex mobile school
                                 </div>
                             </div>
                         </a>
                     </div>
-                    <div class="portfolio-item photo">
-                        <a class="popup-link" href="/portfolio/img-5.jpeg" title="Lorem Ipsum languages">
-                            <img src="/portfolio/img-5.jpeg" alt="">
+                    <div class="portfolio-item mobile">
+                        <a class="popup-link" href="/portfolio/kakadu.png" title="Kakadu taxipay">
+                            <img src="/portfolio/kakadu.png" alt="">
                             <div class="portfolio-caption ">
-                                <h3 class="portfolio-title">Lorem Ipsum languages</h3>
+                                <h3 class="portfolio-title">Kakadu taxipay</h3>
                                 <div class="portfolio-descr">
-                                    Photo
+                                    Payment for taxi
                                 </div>
                             </div>
                         </a>
                     </div>
-                    <div class="portfolio-item wide-tall app photo web">
-                        <a class="popup-link" href="/portfolio/img-6.jpg" title="Lorem Ipsum languages">
-                            <img src="/portfolio/img-6.jpg" alt="">
+                    <div class="portfolio-item wide web">
+                        <a class="popup-link" href="/portfolio/towork.png" title="Towork.uz website">
+                            <img src="/portfolio/towork.png" alt="">
                             <div class="portfolio-caption ">
-                                <h3 class="portfolio-title">Lorem Ipsum languages</h3>
+                                <h3 class="portfolio-title">Towork.uz website</h3>
                                 <div class="portfolio-descr">
-                                    App / Photo / Web
+                                    Towork.uz website
                                 </div>
                             </div>
                         </a>
                     </div>
-                    <div class="portfolio-item wide photo web">
-                        <a class="popup-link" href="/portfolio/img-7.jpg" title="Lorem Ipsum languages">
-                            <img src="/portfolio/img-7.jpg" alt="">
+                    <div class="portfolio-item wide-tall web">
+                        <a class="popup-link" href="/portfolio/afex_old.png" title="Afex - online store">
+                            <img src="/portfolio/afex_old.png" alt="">
                             <div class="portfolio-caption ">
-                                <h3 class="portfolio-title">Lorem Ipsum languages</h3>
+                                <h3 class="portfolio-title">Afex - online store</h3>
                                 <div class="portfolio-descr">
-                                    Photo / Photo
+                                    Afex - online store
                                 </div>
                             </div>
                         </a>
                     </div>
-                    <div class="portfolio-item app">
-                        <a class="popup-link" href="/portfolio/img-8.jpg" title="Lorem Ipsum languages">
-                            <img src="/portfolio/img-8.jpg" alt="">
+                    <div class="portfolio-item web mobile">
+                        <a class="popup-link" href="/portfolio/afex_old_mobile.png" title="Afex - online store">
+                            <img src="/portfolio/afex_old_mobile.png" alt="">
                             <div class="portfolio-caption ">
-                                <h3 class="portfolio-title">Lorem Ipsum languages</h3>
+                                <h3 class="portfolio-title">Afex - online store</h3>
                                 <div class="portfolio-descr">
-                                    App
+                                    Web mobile version
                                 </div>
                             </div>
                         </a>
                     </div>
-                    <div class="portfolio-item app">
-                        <a class="popup-link" href="/portfolio/img-9.jpeg" title="Lorem Ipsum languages">
-                            <img src="/portfolio/img-9.jpeg" alt="">
+                    <div class="portfolio-item web mobile">
+                        <a class="popup-link" href="/portfolio/afex_new_mobile.png" title="Afex - online store">
+                            <img src="/portfolio/afex_new_mobile.png" alt="">
                             <div class="portfolio-caption ">
-                                <h3 class="portfolio-title">Lorem Ipsum languages</h3>
+                                <h3 class="portfolio-title">Afex - online store</h3>
                                 <div class="portfolio-descr">
-                                    App
+                                    New version of web mobile app
                                 </div>
                             </div>
                         </a>
                     </div>
-                    <div class="portfolio-item wide photo web">
-                        <a class="popup-youtube" href="https://www.youtube.com/watch?v=mUZAmz3YHQ4" title="Lorem Ipsum languages">
-                            <img src="/portfolio/img-10.jpg" alt="">
+                    <div class="portfolio-item wide web">
+                        <a class="popup-link" href="/portfolio/algo.jpg" title="Algo.ubtuit.uz">
+                            <img src="/portfolio/algo.jpg" alt="">
                             <div class="portfolio-caption ">
-                                <h3 class="portfolio-title">Lorem Ipsum languages</h3>
+                                <h3 class="portfolio-title">Algo.ubtuit.uz</h3>
                                 <div class="portfolio-descr">
-                                    Photo / Web
+                                    Online judge
                                 </div>
                             </div>
                         </a>
