added science articles

--- a/education.html
+++ b/education.html
@@ -91,6 +91,106 @@ js: "/js/education.js"
             <h5 class="text-center">Achievements that received in the period of study.</h5>
             <div class="popup-gallery">
             </div>
+            <h3 class="section-title text-center" style="padding: 0;">Science articles</h3>
+            <h5 class="text-center">Science articles that published in the period of study.</h5>
+            <div class="row">
+                <div class="col-md-3 certificate">
+                    <a href="/img/articles/moluch_229.pdf" target="_blank">
+                        <img class="certificate-item" src="/img/articles/moluch_229.jpg">
+                        <p class="certificate-text">Применение инструментов форензики на пути к расследованию инцидентов (page 1)</p>
+                    </a>
+                </div>
+                <div class="col-md-3 certificate">
+                    <a href="/img/articles/shk4.pdf" target="_blank">
+                        <img class="certificate-item" src="/img/articles/shk4.jpg">
+                        <p class="certificate-text">Стили мышления в освоении технологий программирования в среднем образовательном учреждении  (page 57)</p>
+                    </a>
+                </div>
+                <div class="col-md-3 certificate">
+                    <a href="/img/articles/moluch_113.pdf" target="_blank">
+                        <img class="certificate-item" src="/img/articles/moluch_113.jpg">
+                        <p class="certificate-text">Ташкилотларда ахборот хавфсизлигига бўладиган хавф-хатар баҳолаш усули ҳақида  (page 35)</p>
+                    </a>
+                </div>
+                <div class="col-md-3 certificate">
+                    <a href="/img/articles/uch21vek_3_3_2016.pdf" target="_blank">
+                        <img class="certificate-item" src="/img/articles/uch21vek.jpg">
+                        <p class="certificate-text">Аналитические и логические стили мышления в изучении технологий программирования в вузах (page 25)</p>
+                    </a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3 certificate">
+                    <a href="/img/articles/uch21vek_3_3_2016.pdf" target="_blank">
+                        <img class="certificate-item" src="/img/articles/uch21vek.jpg">
+                        <p class="certificate-text">Роль таксономия Бенджамина Блума в обучении программированию (page 48)</p>
+                    </a>
+                </div>
+                <div class="col-md-3 certificate">
+                    <a href="/img/articles/uch21vek_3_2_2016.pdf" target="_blank">
+                        <img class="certificate-item" src="/img/articles/uch21vek.jpg">
+                        <p class="certificate-text">Функции компьютера и компьютеризованное обучение при изучении иностранного языка (page 30)</p>
+                    </a>
+                </div>
+                <div class="col-md-3 certificate">
+                    <a href="/img/articles/конференция_сборник_статей_2015_IGU.pdf" target="_blank">
+                        <img class="certificate-item" src="/img/articles/конференция_сборник_статей_2015_IGU.jpg">
+                        <p class="certificate-text">Comparing neural network models for time series prediction (page 231)</p>
+                    </a>
+                </div>
+                <div class="col-md-3 certificate">
+                    <a href="/img/articles/Ёш%20олимлар%20конференцияси-2016%20II%20қисм.pdf" target="_blank">
+                        <img class="certificate-item" src="/img/articles/Ёш%20олимлар%20конференцияси-2016%20II%20қисм.jpg">
+                        <p class="certificate-text">Талабаларга маълумотларни интеллектуал тахлили фанини ўқитишда “Data mining tools” ластурий тахминотларининг ўрни (page 268)</p>
+                    </a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3 certificate">
+                    <a href="/img/articles/Ёш%20олимлар%20конференцияси-2016%20II%20қисм.pdf" target="_blank">
+                        <img class="certificate-item" src="/img/articles/Ёш%20олимлар%20конференцияси-2016%20II%20қисм.jpg">
+                        <p class="certificate-text">Xопфилд нейрон тўри асосида тимсолларни таниб олиш масаласи дастурий таъминоти (page 273)</p>
+                    </a>
+                </div>
+                <div class="col-md-3 certificate">
+                    <a href="/img/articles/Ёш%20олимлар%20конференцияси-2016%20I%20қисм.pdf" target="_blank">
+                        <img class="certificate-item" src="/img/articles/Ёш%20олимлар%20конференцияси-2016%20I%20қисм.jpg">
+                        <p class="certificate-text">Talabalar bilimini baholashning o'ziga hos usuli (page 576)</p>
+                    </a>
+                </div>
+                <div class="col-md-3 certificate">
+                    <a href="/img/articles/Ёш%20олимлар%20конференцияси-2016%20I%20қисм.pdf" target="_blank">
+                        <img class="certificate-item" src="/img/articles/Ёш%20олимлар%20конференцияси-2016%20I%20қисм.jpg">
+                        <p class="certificate-text">Ta'lim sohasida kompyuter o'quv o'yinlarining qo'llanilishi (page 582)</p>
+                    </a>
+                </div>
+                <div class="col-md-3 certificate">
+                    <a href="/img/articles/Сборник%209.pdf" target="_blank">
+                        <img class="certificate-item" src="/img/articles/Сборник%209.jpg">
+                        <p class="certificate-text">Капитал маблағларни корхоналараро оптимал тақсимлашни динамик усул дастурини яратиш (page 204)</p>
+                    </a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3 certificate">
+                    <a href="/img/articles/Сборник%209.pdf" target="_blank">
+                        <img class="certificate-item" src="/img/articles/Сборник%209.jpg">
+                        <p class="certificate-text">“Dasturlash asoslari” fanidan masala yechish bosqichlarini o'qitish metodikasi (page 337)</p>
+                    </a>
+                </div>
+                <div class="col-md-3 certificate">
+                    <a href="/img/articles/URDU_barkamol_avlod_1.pdf" target="_blank">
+                        <img class="certificate-item" src="/img/articles/URDU_barkamol_avlod.jpg">
+                        <p class="certificate-text">Tarixiy merosimizning bugungi kundagi qadri (page 27)</p>
+                    </a>
+                </div>
+                <div class="col-md-3 certificate">
+                    <a href="/img/articles/URDU_barkamol_avlod_2.pdf" target="_blank">
+                        <img class="certificate-item" src="/img/articles/URDU_barkamol_avlod.jpg">
+                        <p class="certificate-text">Uyushmagan yoshlar bilan ishlash tizimini takomillashtirish (page 362)</p>
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
