cyrillic filenames changed to latyn

--- a/education.html
+++ b/education.html
@@ -133,48 +133,48 @@ js: "/js/education.js"
                     </a>
                 </div>
                 <div class="col-md-3 certificate">
-                    <a href="/img/articles/конференция_сборник_статей_2015_IGU.pdf" target="_blank">
-                        <img class="certificate-item" src="/img/articles/конференция_сборник_статей_2015_IGU.jpg">
+                    <a href="/img/articles/IGU_2015.pdf" target="_blank">
+                        <img class="certificate-item" src="/img/articles/IGU_2015.jpg">
                         <p class="certificate-text">Comparing neural network models for time series prediction (page 231)</p>
                     </a>
                 </div>
                 <div class="col-md-3 certificate">
-                    <a href="/img/articles/Ёш%20олимлар%20конференцияси-2016%20II%20қисм.pdf" target="_blank">
-                        <img class="certificate-item" src="/img/articles/Ёш%20олимлар%20конференцияси-2016%20II%20қисм.jpg">
+                    <a href="/img/articles/yosh_olimlar_konferensiyasi_2016_2_qism.pdf" target="_blank">
+                        <img class="certificate-item" src="/img/articles/yosh_olimlar_konferensiyasi_2016_2_qism.jpg">
                         <p class="certificate-text">Талабаларга маълумотларни интеллектуал тахлили фанини ўқитишда “Data mining tools” ластурий тахминотларининг ўрни (page 268)</p>
                     </a>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-3 certificate">
-                    <a href="/img/articles/Ёш%20олимлар%20конференцияси-2016%20II%20қисм.pdf" target="_blank">
-                        <img class="certificate-item" src="/img/articles/Ёш%20олимлар%20конференцияси-2016%20II%20қисм.jpg">
+                    <a href="/img/articles/yosh_olimlar_konferensiyasi_2016_2_qism.pdf" target="_blank">
+                        <img class="certificate-item" src="/img/articles/yosh_olimlar_konferensiyasi_2016_2_qism.jpg">
                         <p class="certificate-text">Xопфилд нейрон тўри асосида тимсолларни таниб олиш масаласи дастурий таъминоти (page 273)</p>
                     </a>
                 </div>
                 <div class="col-md-3 certificate">
-                    <a href="/img/articles/Ёш%20олимлар%20конференцияси-2016%20I%20қисм.pdf" target="_blank">
-                        <img class="certificate-item" src="/img/articles/Ёш%20олимлар%20конференцияси-2016%20I%20қисм.jpg">
+                    <a href="/img/articles/yosh_olimlar_konferensiyasi_2016_1_qism.pdf" target="_blank">
+                        <img class="certificate-item" src="/img/articles/yosh_olimlar_konferensiyasi_2016_1_qism.jpg">
                         <p class="certificate-text">Talabalar bilimini baholashning o'ziga hos usuli (page 576)</p>
                     </a>
                 </div>
                 <div class="col-md-3 certificate">
-                    <a href="/img/articles/Ёш%20олимлар%20конференцияси-2016%20I%20қисм.pdf" target="_blank">
-                        <img class="certificate-item" src="/img/articles/Ёш%20олимлар%20конференцияси-2016%20I%20қисм.jpg">
+                    <a href="/img/articles/yosh_olimlar_konferensiyasi_2016_1_qism.pdf" target="_blank">
+                        <img class="certificate-item" src="/img/articles/yosh_olimlar_konferensiyasi_2016_1_qism.jpg">
                         <p class="certificate-text">Ta'lim sohasida kompyuter o'quv o'yinlarining qo'llanilishi (page 582)</p>
                     </a>
                 </div>
                 <div class="col-md-3 certificate">
-                    <a href="/img/articles/Сборник%209.pdf" target="_blank">
-                        <img class="certificate-item" src="/img/articles/Сборник%209.jpg">
+                    <a href="/img/articles/tendensii_i_perspektivy_razvitiya_nauki.pdf" target="_blank">
+                        <img class="certificate-item" src="/img/articles/tendensii_i_perspektivy_razvitiya_nauki.jpg">
                         <p class="certificate-text">Капитал маблағларни корхоналараро оптимал тақсимлашни динамик усул дастурини яратиш (page 204)</p>
                     </a>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-3 certificate">
-                    <a href="/img/articles/Сборник%209.pdf" target="_blank">
-                        <img class="certificate-item" src="/img/articles/Сборник%209.jpg">
+                    <a href="/img/articles/tendensii_i_perspektivy_razvitiya_nauki.pdf" target="_blank">
+                        <img class="certificate-item" src="/img/articles/tendensii_i_perspektivy_razvitiya_nauki.jpg">
                         <p class="certificate-text">“Dasturlash asoslari” fanidan masala yechish bosqichlarini o'qitish metodikasi (page 337)</p>
                     </a>
                 </div>
