some seo optimisations

--- a/education.html
+++ b/education.html
@@ -7,7 +7,7 @@ js: "/js/education.js"
 <div id="education-page" class="page-container">
     <div class="container">
         <div class="page_title text-center">
-            <h2 class="page-title">EDUCATION</h2>
+            <h1 class="page-title">EDUCATION</h1>
         </div>
         <div class="sub-section">
             <h3 class="section-title text-center">EDUCATION HISTORY</h3>
@@ -96,25 +96,25 @@ js: "/js/education.js"
             <div class="row">
                 <div class="col-md-3 certificate">
                     <a href="/img/articles/moluch_229.pdf" target="_blank">
-                        <img class="certificate-item" src="/img/articles/moluch_229.jpg">
+                        <img class="certificate-item" src="/img/articles/moluch_229.jpg" alt="Применение инструментов форензики на пути к расследованию инцидентов" title="Применение инструментов форензики на пути к расследованию инцидентов">
                         <p class="certificate-text">Применение инструментов форензики на пути к расследованию инцидентов (page 1)</p>
                     </a>
                 </div>
                 <div class="col-md-3 certificate">
                     <a href="/img/articles/shk4.pdf" target="_blank">
-                        <img class="certificate-item" src="/img/articles/shk4.jpg">
+                        <img class="certificate-item" src="/img/articles/shk4.jpg" alt="Стили мышления в освоении технологий программирования в среднем образовательном учреждении" title="Стили мышления в освоении технологий программирования в среднем образовательном учреждении">
                         <p class="certificate-text">Стили мышления в освоении технологий программирования в среднем образовательном учреждении  (page 57)</p>
                     </a>
                 </div>
                 <div class="col-md-3 certificate">
                     <a href="/img/articles/moluch_113.pdf" target="_blank">
-                        <img class="certificate-item" src="/img/articles/moluch_113.jpg">
+                        <img class="certificate-item" src="/img/articles/moluch_113.jpg" alt="Ташкилотларда ахборот хавфсизлигига бўладиган хавф-хатар баҳолаш усули ҳақида" title="Ташкилотларда ахборот хавфсизлигига бўладиган хавф-хатар баҳолаш усули ҳақида">
                         <p class="certificate-text">Ташкилотларда ахборот хавфсизлигига бўладиган хавф-хатар баҳолаш усули ҳақида  (page 35)</p>
                     </a>
                 </div>
                 <div class="col-md-3 certificate">
                     <a href="/img/articles/uch21vek_3_3_2016.pdf" target="_blank">
-                        <img class="certificate-item" src="/img/articles/uch21vek.jpg">
+                        <img class="certificate-item" src="/img/articles/uch21vek.jpg" alt="Аналитические и логические стили мышления в изучении технологий программирования в вузах" title="Аналитические и логические стили мышления в изучении технологий программирования в вузах">
                         <p class="certificate-text">Аналитические и логические стили мышления в изучении технологий программирования в вузах (page 25)</p>
                     </a>
                 </div>
@@ -122,25 +122,25 @@ js: "/js/education.js"
             <div class="row">
                 <div class="col-md-3 certificate">
                     <a href="/img/articles/uch21vek_3_3_2016.pdf" target="_blank">
-                        <img class="certificate-item" src="/img/articles/uch21vek.jpg">
+                        <img class="certificate-item" src="/img/articles/uch21vek.jpg" alt="Роль таксономия Бенджамина Блума в обучении программированию" title="Роль таксономия Бенджамина Блума в обучении программированию">
                         <p class="certificate-text">Роль таксономия Бенджамина Блума в обучении программированию (page 48)</p>
                     </a>
                 </div>
                 <div class="col-md-3 certificate">
                     <a href="/img/articles/uch21vek_3_2_2016.pdf" target="_blank">
-                        <img class="certificate-item" src="/img/articles/uch21vek.jpg">
+                        <img class="certificate-item" src="/img/articles/uch21vek.jpg" alt="Функции компьютера и компьютеризованное обучение при изучении иностранного языка" title="Функции компьютера и компьютеризованное обучение при изучении иностранного языка">
                         <p class="certificate-text">Функции компьютера и компьютеризованное обучение при изучении иностранного языка (page 30)</p>
                     </a>
                 </div>
                 <div class="col-md-3 certificate">
                     <a href="/img/articles/IGU_2015.pdf" target="_blank">
-                        <img class="certificate-item" src="/img/articles/IGU_2015.jpg">
+                        <img class="certificate-item" src="/img/articles/IGU_2015.jpg" alt="Comparing neural network models for time series prediction" title="Comparing neural network models for time series prediction">
                         <p class="certificate-text">Comparing neural network models for time series prediction (page 231)</p>
                     </a>
                 </div>
                 <div class="col-md-3 certificate">
                     <a href="/img/articles/yosh_olimlar_konferensiyasi_2016_2_qism.pdf" target="_blank">
-                        <img class="certificate-item" src="/img/articles/yosh_olimlar_konferensiyasi_2016_2_qism.jpg">
+                        <img class="certificate-item" src="/img/articles/yosh_olimlar_konferensiyasi_2016_2_qism.jpg" alt="Талабаларга маълумотларни интеллектуал тахлили фанини ўқитишда “Data mining tools” ластурий тахминотларининг ўрни" title="Талабаларга маълумотларни интеллектуал тахлили фанини ўқитишда “Data mining tools” ластурий тахминотларининг ўрни">
                         <p class="certificate-text">Талабаларга маълумотларни интеллектуал тахлили фанини ўқитишда “Data mining tools” ластурий тахминотларининг ўрни (page 268)</p>
                     </a>
                 </div>
@@ -148,25 +148,25 @@ js: "/js/education.js"
             <div class="row">
                 <div class="col-md-3 certificate">
                     <a href="/img/articles/yosh_olimlar_konferensiyasi_2016_2_qism.pdf" target="_blank">
-                        <img class="certificate-item" src="/img/articles/yosh_olimlar_konferensiyasi_2016_2_qism.jpg">
+                        <img class="certificate-item" src="/img/articles/yosh_olimlar_konferensiyasi_2016_2_qism.jpg" alt="Xопфилд нейрон тўри асосида тимсолларни таниб олиш масаласи дастурий таъминоти" title="Xопфилд нейрон тўри асосида тимсолларни таниб олиш масаласи дастурий таъминоти">
                         <p class="certificate-text">Xопфилд нейрон тўри асосида тимсолларни таниб олиш масаласи дастурий таъминоти (page 273)</p>
                     </a>
                 </div>
                 <div class="col-md-3 certificate">
                     <a href="/img/articles/yosh_olimlar_konferensiyasi_2016_1_qism.pdf" target="_blank">
-                        <img class="certificate-item" src="/img/articles/yosh_olimlar_konferensiyasi_2016_1_qism.jpg">
+                        <img class="certificate-item" src="/img/articles/yosh_olimlar_konferensiyasi_2016_1_qism.jpg" alt="Talabalar bilimini baholashning o'ziga hos usuli" title="Talabalar bilimini baholashning o'ziga hos usuli">
                         <p class="certificate-text">Talabalar bilimini baholashning o'ziga hos usuli (page 576)</p>
                     </a>
                 </div>
                 <div class="col-md-3 certificate">
                     <a href="/img/articles/yosh_olimlar_konferensiyasi_2016_1_qism.pdf" target="_blank">
-                        <img class="certificate-item" src="/img/articles/yosh_olimlar_konferensiyasi_2016_1_qism.jpg">
+                        <img class="certificate-item" src="/img/articles/yosh_olimlar_konferensiyasi_2016_1_qism.jpg" alt="Ta'lim sohasida kompyuter o'quv o'yinlarining qo'llanilishi" title="Ta'lim sohasida kompyuter o'quv o'yinlarining qo'llanilishi">
                         <p class="certificate-text">Ta'lim sohasida kompyuter o'quv o'yinlarining qo'llanilishi (page 582)</p>
                     </a>
                 </div>
                 <div class="col-md-3 certificate">
                     <a href="/img/articles/tendensii_i_perspektivy_razvitiya_nauki.pdf" target="_blank">
-                        <img class="certificate-item" src="/img/articles/tendensii_i_perspektivy_razvitiya_nauki.jpg">
+                        <img class="certificate-item" src="/img/articles/tendensii_i_perspektivy_razvitiya_nauki.jpg" alt="Капитал маблағларни корхоналараро оптимал тақсимлашни динамик усул дастурини яратиш" title="Капитал маблағларни корхоналараро оптимал тақсимлашни динамик усул дастурини яратиш">
                         <p class="certificate-text">Капитал маблағларни корхоналараро оптимал тақсимлашни динамик усул дастурини яратиш (page 204)</p>
                     </a>
                 </div>
@@ -174,19 +174,19 @@ js: "/js/education.js"
             <div class="row">
                 <div class="col-md-3 certificate">
                     <a href="/img/articles/tendensii_i_perspektivy_razvitiya_nauki.pdf" target="_blank">
-                        <img class="certificate-item" src="/img/articles/tendensii_i_perspektivy_razvitiya_nauki.jpg">
+                        <img class="certificate-item" src="/img/articles/tendensii_i_perspektivy_razvitiya_nauki.jpg" alt="Dasturlash asoslari” fanidan masala yechish bosqichlarini o'qitish metodikasi" title="Dasturlash asoslari” fanidan masala yechish bosqichlarini o'qitish metodikasi">
                         <p class="certificate-text">“Dasturlash asoslari” fanidan masala yechish bosqichlarini o'qitish metodikasi (page 337)</p>
                     </a>
                 </div>
                 <div class="col-md-3 certificate">
                     <a href="/img/articles/URDU_barkamol_avlod_1.pdf" target="_blank">
-                        <img class="certificate-item" src="/img/articles/URDU_barkamol_avlod.jpg">
+                        <img class="certificate-item" src="/img/articles/URDU_barkamol_avlod.jpg" alt="Tarixiy merosimizning bugungi kundagi qadri" title="Tarixiy merosimizning bugungi kundagi qadri">
                         <p class="certificate-text">Tarixiy merosimizning bugungi kundagi qadri (page 27)</p>
                     </a>
                 </div>
                 <div class="col-md-3 certificate">
                     <a href="/img/articles/URDU_barkamol_avlod_2.pdf" target="_blank">
-                        <img class="certificate-item" src="/img/articles/URDU_barkamol_avlod.jpg">
+                        <img class="certificate-item" src="/img/articles/URDU_barkamol_avlod.jpg" alt="Uyushmagan yoshlar bilan ishlash tizimini takomillashtirish" title="Uyushmagan yoshlar bilan ishlash tizimini takomillashtirish">
                         <p class="certificate-text">Uyushmagan yoshlar bilan ishlash tizimini takomillashtirish (page 362)</p>
                     </a>
                 </div>
