--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@ js: "/js/home.js"
     <div class="container">
         <div class="sub-section">
             <div class="home_title">
-                <h1>Yura Sultonov</h1>
+                <h1>Yura Sultonov's </h1>
+                <h2>portfolio & personal blog</h2>
                 <div id="subtitle"></div>
             </div>
         </div>
