some seo optimisations

--- a/education.html
+++ b/education.html
@@ -1,6 +1,7 @@
 ---
 layout: base
 title: Education
+subtitle: "Here you can see information about my studies, achievements and scientific works."
 use-site-title: true
 js: "/js/education.js"
 ---
