--- a/profile.html
+++ b/profile.html
@@ -1,6 +1,7 @@
 ---
 layout: base
 title: Profile
+subtitle: "Hi. I’m Yuldoshboy(Yura) Sultonov, a software developer from Uzbekistan. I am passionate about building excellent software that improves the lives of those around me."
 use-site-title: true
 ---
 <div id="profile-page" class="page-container">
