--- a/skills.html
+++ b/skills.html
@@ -1,6 +1,7 @@
 ---
 layout: base
 title: Skills
+subtitle: "Here you can see information about my skills."
 use-site-title: true
 ---
 <div id="services-page" class="page-container">
